# finagent

./: .gitignore  .gitmodules  AGENTS.md  EXECUTION_BUILD_PLAN.md  LICENSE  README.md  REPO_LAYOUT.md  TODO.md  TOOL_DESIGN_PHILOSOPHY.md  executor.py  get_portfolio.py  how_to_build_it.md  ibkr.py  key_math.md  main.py  planner.py  planner_leap.py  planner_weekly.py  pmcc_config.json  pmcc_portfolio.py  portfolio.py  portfolio_scenario_ev.py  price_exit.py  price_exit_yf.py  price_probe.py  price_spread.py  pricing.py  pyproject.toml  regime_detector.py  requirements.txt  run_urgent_hedge.py  scenario_analyzer.py  test_script.py  trade_thesis.md  urgent_hedge.py  urgent_hedge_execution_spec.md  urgent_hedge_types.py  watch_orders.py  weekly_probe_20260402_150_open.json  weekly_probe_proposal.json  (+1 more)
agent_notes/: 2026-03-07_ibkr_level5_pmcc_bot_implementation.md  2026-03-07_key_insights_and_future_work.md  2026-03-11_final_market_open_plan.md  2026-03-12_0244_photonics_margin_soitec.md  2026-03-12_0356_margin_and_account_capacity.md  2026-03-12_0356_photonics_execution_and_orders.md  2026-03-12_0356_skill_architecture_and_cleanup.md  2026-03-12_ewy_210_bucket_strategy.md  2026-03-12_ewy_call_overwrite_state.md  2026-03-12_ewy_thread_postmortem.md  2026-03-12_hedge_execution_retrospective.md  2026-03-12_hedge_modeling_summary.md  2026-03-12_remaining_work_and_playbook.md  2026-03-12_sources_and_web_lookup_policy.md  2026-03-12_thread_topic_partition_index.md  2026-03-12_thread_topics_index.md  2026-03-12_tooling_design_and_watch_primitives.md  agent_1_mar_11th_dump.md  (+3 more)
(+276 files in other folders)
