[project]
name = "ikbr-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "ib-insync>=0.9.86",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "stratoforge",
    "yfinance>=1.2.0",
]

[tool.uv.sources]
stratoforge = { path = "stratoforge", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
